--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -6,17 +6,16 @@ on:
   pull_request:
     branches:
       - main
-    paths-ignore:
-      - '.git*'
-      - 'docker-compose.yml'
-      - 'README.*'
+    paths:
+      - .github/**
+      - Dockerfile
+      - rootfs/**
   push:
     branches:
       - main
-    paths-ignore:
-      - '.git*'
-      - 'docker-compose.yml'
-      - 'README.*'
+    paths:
+      - Dockerfile
+      - rootfs/**
   workflow_dispatch:
 
 env:
